--- a/HTML!/intro/index.html
+++ b/HTML!/intro/index.html
@@ -13,10 +13,10 @@
         <p>An HTML element is defined by a start tag, some content, and an end tag:</p>
         <pre>
             <code>
-                <tagname> Content goes here... </tagname>
+                &lt;tagname&gt; Content goes here... &lt;tagname&gt;
             </code>
         </pre>
-        <p>Note: Some HTML elements have no content (like the <br> element). These elements are called empty elements. Empty elements do not have an end tag!</p>
-        
+        <p>Note: Some HTML elements have no content (like the &lt;br&gt;element). These elements are called empty elements. Empty elements do not have an end tag!</p>
+
 </body>
 </html>
