--- a/HTML!/intro/index.html
+++ b/HTML!/intro/index.html
@@ -13,7 +13,7 @@
         <p>An HTML element is defined by a start tag, some content, and an end tag:</p>
         <pre>
             <code>
-                &lt;tagname&gt; Content goes here... &lt;tagname&gt;
+                &lt;tagname&gt; Content goes here... &lt;&frasl;tagname&gt;
             </code>
         </pre>
         <p>Note: Some HTML elements have no content (like the &lt;br&gt;element). These elements are called empty elements. Empty elements do not have an end tag!</p>
